<resources>
    <string name="app_name">Riff King</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="dummy_logo_description">dummy logo</string>
    <string name="register_tv_text">Join Now!</string>
    <string name="register_tv_font_family">casual</string>
    <string name="login_btn_text">Login</string>
    <string name="password_et_font_family">casual</string>
    <string name="login_et_font_family">12sp</string>
    <string name="email_et_font_family">casual</string>
    <string name="name_et_font_family">casual</string>
    <string name="name_hint">Name</string>
    <string name="register_btn_text">JOIN NOW</string>
    <string name="login_tv_text">Login</string>
    <string name="login_tv_font_family">casual</string>
    <string name="logo_description">Riff King Logo</string>
    <string name="title_activity_home">Riff King</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_blog">Blog</string>
    <string name="nav_home">Home</string>
    <string name="nav_ranking">Ranking</string>
    <string name="nav_my_videos">My Videos</string>
    <string name="nav_upload">Upload</string>
    <string name="nav_communicate">Communicate</string>
    <string name="nav_share">Share</string>
    <string name="nav_settings">Settings</string>
    <string name="insert_thread_title">Thread Title</string>
    <string name="insert_video_url">Video URL</string>
    <string name="insert_category">Category</string>
    <string name="insert_content">Content</string>
    <string name="profile_img_desc">desc</string>
    <string name="follow_btn">follow</string>
    <string name="type_et_hint">Type…</string>
    <string name="profile_title_hint">Title</string>
    <string name="profile_transfer_btn">Transfer</string>
    <string name="fragment_upload">Fragment Upload</string>
    <string name="fragment_videos">Fragment Videos</string>
    <string name="share_text">I want to invite you to Riff King app.
        Compete or watch other musicians fighting for the Riff King title.
        Maybe you are not a rock star but you can be the Riff King.
        And there is only one Riff King.
        You can find it on Google Play</string>

    <string name="profile_rep_value_default">50</string>
    <string name="profile_rep_sent">Rep Sent!</string>
    <string name="profile_rep_not_enough">Not enough rep</string>
</resources>
