<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_48dp"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_ranking"
            android:icon="@drawable/ic_poll_black_48dp"
            android:title="@string/nav_ranking"/>
        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/ic_play_circle_filled_black_48dp"
            android:title="@string/nav_my_videos"/>
        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/ic_file_upload_black_48dp"
            android:title="@string/nav_upload"/>
    </group>

    <item android:title="@string/nav_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_48dp"
                android:title="@string/nav_share"/>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_48dp"
                android:title="@string/nav_settings"/>
        </menu>
    </item>

</menu>
