<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context="com.example.grazyna.riffking.LoginActivity">

    <LinearLayout
        android:id="@+id/login_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--TODO change dummy logo-->
        <ImageView
            android:id="@+id/login_logo_img"
            android:layout_width="@dimen/logo_img_width"
            android:layout_height="@dimen/logo_img_height"
            android:layout_gravity="center"
            android:contentDescription="@string/dummy_logo_description"
            android:src="@drawable/dummy_logo" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/email_et_width"
            android:layout_height="@dimen/email_et_height"
            android:layout_gravity="center"
            android:textColorHint="@color/text_4">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_email_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@string/email_et_font_family"
                android:hint="@string/email_hint"
                android:textColorHint="@color/text_4"
                android:textSize="@dimen/email_et_text_size"
                android:textStyle="normal"
                app:backgroundTint="@color/text_4" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/password_et_width"
            android:layout_height="@dimen/password_et_height"
            android:layout_gravity="center"
            android:textColorHint="@color/text_4">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_password_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@string/password_et_font_family"
                android:hint="@string/password_hint"
                android:textColorHint="@color/text_4"
                android:textSize="@dimen/password_et_text_size"
                android:textStyle="normal"
                app:backgroundTint="@color/text_4" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_login_btn"
            android:layout_width="@dimen/login_btn_width"
            android:layout_height="@dimen/login_btn_height"
            android:layout_gravity="center"
            android:background="@color/color_accent"
            android:text="@string/login_btn_text"
            android:textColor="@color/text_5"
            android:textSize="@dimen/login_btn_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_register_tv"
            android:layout_width="@dimen/register_tv_width"
            android:layout_height="@dimen/register_tv_height"
            android:layout_gravity="center"
            android:fontFamily="@string/register_tv_font_family"
            android:gravity="center"
            android:text="@string/register_tv_text"
            android:textColor="@color/text_4"
            android:textSize="@dimen/register_tv_text_size"
            android:textStyle="normal" />


    </LinearLayout>

</ScrollView>
