<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:gravity="center"
                                             android:orientation="vertical"
                                             tools:context=".presentation.upload.UploadFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/title_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/insert_thread_title"
            android:inputType="textPersonName"
            android:maxLength="40"
            android:textSize="@dimen/default_et_fs"/>

    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/URL_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/insert_video_url"
        android:inputType="text"
        android:textSize="@dimen/default_et_fs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
        app:layout_constraintVertical_bias="0.060000002"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/category_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:ems="10"
            android:hint="@string/insert_category"
            android:inputType="text"
            android:textSize="@dimen/default_et_fs"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/content_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/insert_content"
            android:inputType="textCapSentences|textMultiLine"

            android:maxLines="10"
            android:scrollbars="none"
            android:textSize="@dimen/default_et_fs"/>

    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/youtube_btn"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/URL_tv"
        app:layout_constraintLeft_toRightOf="@+id/URL_tv"
        app:layout_constraintTop_toTopOf="@+id/URL_tv"
        app:layout_constraintVertical_bias="0.592"
        app:srcCompat="@drawable/ic_play_circle_filled_black_48dp"
        />

</android.support.constraint.ConstraintLayout>
